--- a/package.json
+++ b/package.json
@@ -6,13 +6,19 @@
   "type": "module",
   "scripts": {
     "start": "node index.js",
-    "server": "nodemon index.js"
+    "server": "nodemon index.js",
+    "client": "npm start --prefix ./client ",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Nastia Kopylova",
   "license": "ISC",
   "dependencies": {
+    "concurrently": "^8.2.2",
+    "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
+    "ethers": "^6.8.0",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.0.1"
   }
 }
